--- a/src/prefpane/en.lproj/InsomniaTPref.xib
+++ b/src/prefpane/en.lproj/InsomniaTPref.xib
@@ -120,7 +120,7 @@
 								<int key="NSCellFlags">67239424</int>
 								<int key="NSCellFlags2">272629760</int>
 								<string key="NSContents">Your MacBook will not suspend when the lid is closed.</string>
-								<object class="NSFont" key="NSSupport">
+								<object class="NSFont" key="NSSupport" id="578855368">
 									<string key="NSName">LucidaGrande</string>
 									<double key="NSSize">13</double>
 									<int key="NSfFlags">16</int>
@@ -164,6 +164,22 @@
 								<double key="NSMaxValue">1</double>
 								<double key="NSCriticalValue">2</double>
 								<int key="NSIndicatorStyle">1</int>
+							</object>
+						</object>
+						<object class="NSTextField" id="911377400">
+							<reference key="NSNextResponder" ref="1037298196"/>
+							<int key="NSvFlags">268</int>
+							<string key="NSFrame">{{17, 20}, {577, 153}}</string>
+							<reference key="NSSuperview" ref="1037298196"/>
+							<bool key="NSEnabled">YES</bool>
+							<object class="NSTextFieldCell" key="NSCell" id="594125330">
+								<int key="NSCellFlags">67239424</int>
+								<int key="NSCellFlags2">272629760</int>
+								<string key="NSContents">Please note that if "Automatically adjust brightness as ambient light changes" is enabled in the Displays preference pane then the backlight will turn on temporarily for a few seconds before switching off again.</string>
+								<reference key="NSSupport" ref="578855368"/>
+								<reference key="NSControlView" ref="911377400"/>
+								<reference key="NSBackgroundColor" ref="147018177"/>
+								<reference key="NSTextColor" ref="259173969"/>
 							</object>
 						</object>
 					</object>
@@ -329,6 +345,7 @@
 							<reference ref="301579186"/>
 							<reference ref="1049224390"/>
 							<reference ref="34194654"/>
+							<reference ref="911377400"/>
 						</object>
 						<reference key="parent" ref="660800786"/>
 					</object>
@@ -414,6 +431,20 @@
 						<reference key="object" ref="383169001"/>
 						<reference key="parent" ref="1049224390"/>
 					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">205</int>
+						<reference key="object" ref="911377400"/>
+						<object class="NSMutableArray" key="children">
+							<bool key="EncodedWithXMLCoder">YES</bool>
+							<reference ref="594125330"/>
+						</object>
+						<reference key="parent" ref="1037298196"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">206</int>
+						<reference key="object" ref="594125330"/>
+						<reference key="parent" ref="911377400"/>
+					</object>
 				</object>
 			</object>
 			<object class="NSMutableDictionary" key="flattenedProperties">
@@ -439,6 +470,8 @@
 					<string>146.IBPluginDependency</string>
 					<string>150.IBPluginDependency</string>
 					<string>151.IBPluginDependency</string>
+					<string>205.IBPluginDependency</string>
+					<string>206.IBPluginDependency</string>
 					<string>6.IBPluginDependency</string>
 					<string>6.ImportedFromIB2</string>
 				</object>
@@ -468,6 +501,8 @@
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
+					<string>com.apple.InterfaceBuilder.CocoaPlugin</string>
 					<integer value="1"/>
 				</object>
 			</object>
@@ -487,7 +522,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">195</int>
+			<int key="maxID">206</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
